Move animation update to follow paint phase for SPv2.

BUG=692310
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2

Review-Url: https://codereview.chromium.org/2693363002
Cr-Commit-Position: refs/heads/master@{#451399}

Former-commit-id: 3d2b854663e325f0618ff313a4c58ff20e959891